# ladim_plugins

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  pytest.ini  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: action_changelog.yml  action_newversion.yml  action_pypi_build.yml  action_pytest.yml  pypi.yml  python-testing.yml  workflow_develop.yml  workflow_pr.yml  workflow_schedule.yml
ladim_ibm/chemicals/: README.md  __init__.py  gridforce.py  ibm.py  ladim.yaml  out.nc  particles.rls  test_chemicals.py
ladim_ibm/egg/: README.md  ibm.py  ladim.yaml  particles.rls  svim_ladim.yaml  svim_make_release.m
ladim_ibm/salmon_lice/: README.md  ann2019_particles.rls  anne2019_ladim.yaml  ibm.py  ladim.yaml  out.nc
ladim_ibm/sedimentation/: README.md  config.yaml  ibm.py  ladim.yaml  out.nc  particles.rls
ladim_ibm/tests/: test_examples.py
ladim_plugins/benthos/: README.md  ibm.py  ladim.yaml  make_release.py  out.nc  particles.rls  test_benthos.py
ladim_plugins/chemicals/: README.md  forcing.nc  gridforce.py  ibm.py  ladim.yaml  make_release.py  out.nc  out.nc.yaml  particles.rls  release.yaml  release_area.geojson  test_chemicals.py  test_make_release.py
ladim_plugins/egg/: README.md  ibm.py  ladim.yaml  out.nc  out.nc.yaml  svim_ladim.yaml  svim_particles.rls
ladim_plugins/inertial/: README.md  ibm.py  ladim.yaml  out.nc  particles.rls  test_inertial.py
ladim_plugins/larvae/: README.md  __init__.py  ibm.py  ladim.yaml  out.nc  out.rls  particles.rls  release.yaml  test_ibm.py
ladim_plugins/lunar_eel/: README.md  forcing.nc  ibm.py  ladim.yaml  out.nc  out.nc.yaml  particles.rls
ladim_plugins/mine/: README.md  __init__.py  gridforce_horizontal.py  ibm.py  ladim.yaml  out.nc  out.nc.yaml  particles.rls  test_ibm.py
ladim_plugins/mine_with_skip/: ladim.yaml  out.nc  out.nc.yaml  particles.rls
ladim_plugins/nk2d/: README.md  forcing.nc  gridforce.py  ladim.yaml  out.nc  out.nc.yaml  particles.rls
ladim_plugins/nk800met/: README.md  forcing.nc  gridforce.py  ladim.yaml  out.nc  out.nc.yaml  particles.rls  test_nk800met.py
ladim_plugins/release/: README.md  __init__.py  __main__.py  farms.py  make_release.py  makrel.py  mkrel.py  out.rls  release.yaml  test_release.py
ladim_plugins/saithe/: README.md  ibm.py  (+3 more)
(+69 files in other folders)
