[metadata]
name = ladim_plugins
version = 1.5.11
description = Plugins for LADiM
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
url = https://github.com/pnsaevik/ladim_plugins
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Operating System :: OS Independent,


[options]
packages =
    ladim_plugins
install_requires =
    numpy!=1.21.0
    pytest
    xarray
    PyYAML
    netCDF4
    pyproj
    triangle
    scipy
    cftime
    ladim
    skyfield
    pandas
    requests
python_requires = >=3.8

[options.entry_points]
console_scripts =
  makrel = ladim_plugins.release.makrel:main
  ladim_raster = ladim_plugins.utils.rasterize:main

[options.package_data]
* = *.nc, *.md, *.rls, *.yaml, *.m, *.bsp, *.geojson
