[metadata]
name = ladim_plugins
version = attr: ladim_plugins.__version__
description = Plugins for LADiM
long_description = file: README.md
long_description_content_type = text/markdown
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
url = https://github.com/pnsaevik/ladim_plugins
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent


[options]
packages = find:
install_requires =
    numpy!=1.21.0
    pytest
    xarray
    PyYAML
    netCDF4
    pyproj
    triangle
    scipy
    cftime
    ladim
    skyfield
    pandas
    requests
    pyarrow
python_requires = >=3.7

[options.entry_points]
console_scripts =
  makrel = ladim_plugins.release.makrel:main
  ladim_raster = ladim_plugins.utils.rasterize:main

[options.package_data]
* = *.nc, *.md, *.rls, *.yaml, *.m, *.bsp, *.geojson
